Add Chat with Antonio button linking to LinkedIn

--- a/index.html
+++ b/index.html
@@ -266,6 +266,21 @@
         </footer>
     </div>
 
+    <!-- Chat with Antonio Button -->
+    <a href="https://www.linkedin.com/in/antonio-li-/" target="_blank" rel="noopener noreferrer" class="chat-button">
+        <div class="chat-button-content">
+            <div class="chat-avatar">
+                <img src="Photo/76e58ee3fad78441e8d6050a0f6741bb.jpg" alt="Antonio">
+                <span class="verified-badge">✓</span>
+            </div>
+            <div class="chat-text">
+                <span class="chat-label">Chat with Antonio</span>
+                <span class="chat-subtitle">Columbia '28 · probably late rn</span>
+            </div>
+        </div>
+        <div class="chat-pulse"></div>
+    </a>
+
     <script src="script.js"></script>
 </body>
 </html>
