Add Antonio chatbot page with full context about background, projects, and personality

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     </div>
 
     <!-- Chat with Antonio Button -->
-    <a href="https://www.linkedin.com/in/antonio-li-/" target="_blank" rel="noopener noreferrer" class="chat-button">
+    <a href="chat.html" class="chat-button">
         <div class="chat-button-content">
             <div class="chat-avatar">
                 <img src="Photo/76e58ee3fad78441e8d6050a0f6741bb.jpg" alt="Antonio">
