Make chat button bigger with bouncing arrows

--- a/index.html
+++ b/index.html
@@ -267,19 +267,23 @@
     </div>
 
     <!-- Chat with Antonio Button -->
-    <a href="chat.html" class="chat-button">
-        <div class="chat-button-content">
-            <div class="chat-avatar">
-                <img src="Photo/76e58ee3fad78441e8d6050a0f6741bb.jpg" alt="Antonio">
-                <span class="verified-badge">✓</span>
+    <div class="chat-button-wrapper">
+        <span class="chat-arrow left">→</span>
+        <a href="chat.html" class="chat-button">
+            <div class="chat-button-content">
+                <div class="chat-avatar">
+                    <img src="Photo/76e58ee3fad78441e8d6050a0f6741bb.jpg" alt="Antonio">
+                    <span class="verified-badge">✓</span>
+                </div>
+                <div class="chat-text">
+                    <span class="chat-label">Chat with Antonio</span>
+                    <span class="chat-subtitle">Columbia '28 · probably late rn</span>
+                </div>
             </div>
-            <div class="chat-text">
-                <span class="chat-label">Chat with Antonio</span>
-                <span class="chat-subtitle">Columbia '28 · probably late rn</span>
-            </div>
-        </div>
-        <div class="chat-pulse"></div>
-    </a>
+            <div class="chat-pulse"></div>
+        </a>
+        <span class="chat-arrow right">←</span>
+    </div>
 
     <script src="script.js"></script>
 </body>
